Refactor benchmark execution and reporting scripts